erDiagram
    Project ||--o{ Document : "上传"
    Project ||--o{ Contract : "关联"
    Project ||--o{ Requirement : "关联"
    Project ||--o{ Solution : "关联"
    Project ||--o{ Milestone : "计划"
    Project ||--o{ Risk : "产生"
    Document ||--o{ Evidence : "提供段落"
    Rule ||--o{ Risk : "规则生成"
    Risk ||--o{ Evidence : "证据挂接"
    Risk ||--o{ Decision : "决策记录"
    Milestone ||--o{ Progress : "进度录入"
    Template }o--o{ Document : "抽取模板"
    Contract }o--o{ Rule : "要素触发"
    Document ||--o{ DocBlock : "解析为文本块"
    OpsEvent }o--|| Sla : "受SLA约束"
